--- a/msMarketTransactions/src/main/resources/application-local.yml
+++ b/msMarketTransactions/src/main/resources/application-local.yml
@@ -20,3 +20,18 @@ spring:
     properties:
       hibernate:
         format_sql: true
+
+
+#        server:
+#          port: 8082
+#        spring:
+#          datasource:
+#            driver-class-name: com.mysql.cj.jdbc.Driver
+#            url: jdbc:mysql://localhost:3306/pixel_palace
+#            username: root
+#            password: "123456789"
+#          jpa:
+#            database-platform: org.hibernate.dialect.MySQL8Dialect
+#            hibernate:
+#              ddl-auto: update
+#            show-sql: true
